# sdarp-ef

./: .gitignore  .gitmodules  README.md  create_environment.sh  data_indices.py  env.yml  instance_generator.py  sdarp.py  sdarp_ef.py
lib/fraggen/: .gitignore  Cargo.toml
lib/fraggen/src/: lib.rs  uid.rs
lib/fraggen/src/data/: darp.rs  mod.rs
lib/fraggen/src/sdarp/: dom.rs  ef.rs  frag.rs  mod.rs  preprocessing.rs
lib/fraglib-py/: Cargo.toml  build.sh  clean.sh  common.sh  conda.yaml
lib/fraglib-py/python/fraglib/: __init__.py  __init__.pyi
lib/fraglib-py/python/fraglib/apvrp/: __init__.pyi  instance.pyi
lib/fraglib-py/python/fraglib/sdarp/: __init__.pyi  instance.pyi
lib/fraglib-py/src/: apvrp.rs  lib.rs  sdarp.rs
lib/instances/: Cargo.toml
lib/instances/instances-macros/: Cargo.toml
lib/instances/instances-macros/src/: lib.rs
lib/instances/src/: lib.rs  modify.rs  preprocess.rs
lib/instances/src/dataset/: apvrp.rs  darp.rs  mod.rs  sdarp.rs
lib/instances/src/parsers/: common.rs  cordeau.rs  meisel.rs  mod.rs  riedler.rs
lib/instances/src/raw/: apvrp.rs  darp.rs  mod.rs
parameters/: baseline.143423.json  baseline.237658.json  baseline.309044.json  baseline.693271.json  baseline.989336.json  lf.143423.json  lf.237658.json  lf.309044.json  lf.693271.json  lf.989336.json  lf_3h.143423.json  lf_3h.237658.json  lf_3h.309044.json  lf_3h.693271.json  lf_3h.989336.json  lf_td010.143423.json  lf_td010.237658.json  lf_td010.309044.json  lf_td010.693271.json  lf_td010.989336.json  lf_td025.143423.json  lf_td025.237658.json  lf_td025.309044.json  lf_td025.693271.json  lf_td025.989336.json  lf_td050.143423.json  lf_td050.237658.json  lf_td050.309044.json  lf_td050.693271.json  lf_td050.989336.json  lf_td200.143423.json  (+39 more)
(+2 files in other folders)
