[package]
name = "instances"
version = "0.1.0"
authors = ["yanni_rist <yanni555rist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
lazy_static = "^1.4"
fnv = "^1.0"
nom = "7.0.0-alpha2"
num-traits = "^0.2"
itertools = "^0.10"
glob = "^0.3"
